force-app/main/default/objects/Field_Fix__c/Field_Fix__c.object-meta.xml
<CustomObject>
    <label>Field Fix</label>
    <nameField>
        <displayFormat>FF{0000}</displayFormat>
        <label>Field Fix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Fix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>