force-app/main/default/objects/Field_Fix__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate</referenceTo>
    <relationshipLabel>Field Fix</relationshipLabel>
    <relationshipName>Field_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>