force-app/main/default/objects/Field_Fix__c/fields/Total_Action_Plans__c.field-meta.xml
<CustomField>
    <fullName>Total_Action_Plans__c</fullName>
    <label>Total Action Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>