force-app/main/default/objects/Field_Fix__c/fields/Total_Job_Card_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Card_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Job Card Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>