force-app/main/default/objects/Field_Fix__c/fields/Type_of_Field__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Field__c</fullName>
    <label>Type of Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>