force-app/main/default/objects/Field_Fix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Plan_Template__c</columns>
    <columns>Completion__c</columns>
    <columns>Total_Job_Card_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>